--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyME/Ya90plNdSliSgIxMs7q",
+      "authorship_tag": "ABX9TyO1kybDK7Bo8/0fI2my7tcf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Interpolation Continued\n",
+        "# Interpolation Continued Homework #3\n",
         "**Lagrange Polynomial Interpolation and Newton's Polynomial Interpolation methods**\n",
         "\n",
         "In this assignment I will demonstrate my understanding of two more interpolation methods\n"
